--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,9 +1,10 @@
 .collection-item {
-  width: 22%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   height: 350px;
   align-items: center;
+  margin: auto;
 
   .image {
     width: 100%;
@@ -19,6 +20,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 18px;
+    padding-bottom: 30px;
 
     .name {
       width: 90%;
