--- a/src/components/collection-view/collection-view.styles.scss
+++ b/src/components/collection-view/collection-view.styles.scss
@@ -6,8 +6,7 @@
   .title {
     font-size: 28px;
     margin-bottom: 25px;
-    margin: auto;
-    padding-bottom: 30px;
+    padding: 20px 20px;
   }
 
   .preview {
