Changed logo to DragonWear with new icon and favicon. Added a bit of style to collections view.

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -8,9 +8,14 @@
     .logo-container {
       height: 100%;
       width: 70px;
-      padding: 25px;
     }
   
+    .logo-name {
+      font-size: 22pt;
+      margin: auto;
+      margin-left: 20px;
+    }
+
     .options {
       width: 50%;
       height: 100%;
