--- a/src/components/collection-view/collection-view.styles.scss
+++ b/src/components/collection-view/collection-view.styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
+  border-top: solid 0.5px silver;
 
   .title {
     font-size: 28px;
