--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -22,6 +22,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      cursor: pointer;
   
       .option {
         padding: 10px 15px;
