--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -17,7 +17,7 @@
     }
 
     .options {
-      width: 50%;
+      width: 30%;
       height: 100%;
       display: flex;
       align-items: center;
@@ -27,6 +27,16 @@
       .option {
         padding: 10px 15px;
       }
+
+    }
+
+    .welcome-message {
+      color: green;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      font-size:18px;
     }
   }
   
