--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -5,6 +5,17 @@
   height: 350px;
   align-items: center;
   margin: auto;
+  position: relative;
+
+  &:hover {
+    .image {
+      opacity: 85%;
+    }
+    .custom-button {
+      opacity: 85%;
+      display: flex;
+    }
+  }
 
   .image {
     width: 100%;
@@ -12,6 +23,14 @@
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
+  }
+
+  .custom-button {
+    width: 80%;
+    opacity: 75%;
+    position: absolute;
+    top: 255px;
+    display: none;
   }
 
   .collection-footer {
