--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -13,11 +13,33 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
+    justify-content: center;
   
     &:hover {
       background-color: white;
       color: black;
       border: 1px solid black;
+    }
+
+    &.inverted {
+      background-color: white;
+      color: black;
+      border: 1px solid black;
+
+      &:hover {
+        background-color: black;
+        color: white;
+      }
+    }
+
+    &.action-button {
+      background-color: darkgreen;
+      color: white;
+
+      &:hover {
+        background-color: green;
+        border: none;
+      }
     }
 
     &.google-sign-in {
