--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,10 @@ a {
 * {
     box-sizing: border-box;
 }
+
+@media only screen and (max-width: 800px) {
+    body {
+        padding: 5px 10px; 
+    }
+  }
+  
