--- a/src/components/collection-view/collection-view.styles.scss
+++ b/src/components/collection-view/collection-view.styles.scss
@@ -24,6 +24,27 @@
     cursor: pointer;
     color: darkgreen
   }
+
+  @media only screen and (max-width: 800px) {
+    .preview {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .preview {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+  
+  @media only screen and (max-width: 350px) {
+    .preview {
+      grid-template-columns: 1fr;
+    }
+  }
+
 }
+
+
 
 
