--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -21,5 +21,11 @@
     button {
       margin-top: auto;
     }
+
+    .empty-message {
+      font-size: 22px;
+      margin: auto;
+    }
+
   }
   
