--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -11,7 +11,7 @@
     }
   
     .logo-name {
-      font-size: 22pt;
+      font-size: 33px;
       margin: auto;
       margin-left: 20px;
     }
@@ -40,3 +40,27 @@
     }
   }
   
+@media only screen and (max-width: 800px) {
+  .header {
+    .options {
+      .option {
+        padding: 10px 10px;
+      }
+    }
+    .logo-name {
+      font-size: 28px;
+      margin-left: 10px;
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .header {
+    .options {
+      width: 75%;
+    }
+    .logo-name {
+      display: none
+    }
+  }
+}
