Added Stripe Payments to Checkout Page.

--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -27,6 +27,20 @@
       margin-top: 30px;
       margin-left: auto;
       font-size: 26px;
+      padding-bottom: 20px;
+    }
+
+    button {
+      margin-left: auto;
+      
+    }
+
+    .test-warning {
+      text-align: right;
+      color: red;
+      font-size: 16px;
+      font-weight: bold;
+      margin-left: auto;
     }
   }
   
