--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -1,10 +1,15 @@
+.checkout-outer {
+  width: 100%;
+  border-top: 0.5px solid silver;
+}
+
 .checkout-page {
     width: 55%;
     min-height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 50px auto 0;
+    margin: 10px auto 0;
   
     .checkout-header {
       width: 100%;
