--- a/src/pages/sign-up-sign-in/sign-up-sign-in.styles.scss
+++ b/src/pages/sign-up-sign-in/sign-up-sign-in.styles.scss
@@ -1,7 +1,24 @@
 .sign-in-and-sign-up {
-    width: 850px;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    margin: 30px auto;
+    justify-content: space-evenly;
+    padding-top: 20px;
+    border-top: 0.5px solid silver;
   }
   
+  @media only screen and (max-width: 900px) {
+    .sign-in-and-sign-up {
+      width: 100%;
+      display: inline-block;
+      margin: auto;
+    }
+
+    .sign-up, .sign-in {
+      margin: auto;
+    }
+
+    .sign-up {
+      padding-top: 35px;
+    }
+
+  }
