Changed opactity css values to decimals. Percentages seem to compile incorrectly when deploying to heroku.

--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -16,7 +16,7 @@
       cursor: pointer;
 
       & .content {
-        opacity: 90%;
+        opacity: 0.9;
       }
 
       & .background-image {
@@ -53,7 +53,7 @@
       justify-content: center;
       border: 1px solid black;
       background-color: white;
-      opacity: 70%;
+      opacity: 0.7;
 
       .title {
         
