--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -9,10 +9,10 @@
 
   &:hover {
     .image {
-      opacity: 85%;
+      opacity: 0.85;
     }
     .custom-button {
-      opacity: 85%;
+      opacity: 0.85;
       display: flex;
     }
   }
@@ -27,7 +27,7 @@
 
   .custom-button {
     width: 80%;
-    opacity: 75%;
+    opacity: 0.75;
     position: absolute;
     top: 255px;
     display: none;
