--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -4,55 +4,63 @@
 }
 
 .checkout-page {
-    width: 55%;
-    min-height: 90vh;
+  width: 55%;
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px auto 0;
+
+  .checkout-header {
+    width: 100%;
+    padding: 10px 0;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px auto 0;
-  
-    .checkout-header {
-      width: 100%;
-      padding: 10px 0;
-      display: flex;
-      justify-content: space-between;
-      border-bottom: 1px solid darkgrey;
-  
-      .header-block {
-        text-transform: capitalize;
-        width: 23%;
-  
-        &:last-child {
-          width: 8%;
-        }
-      }
-    }
-  
-    .total {
-      margin-top: 30px;
-      margin-left: auto;
-      font-size: 26px;
-      padding-bottom: 20px;
+    justify-content: space-between;
+    border-bottom: 1px solid darkgrey;
+    text-transform: capitalize;
+
+    .header-image {
+      width: 23%;
     }
 
-    button {
-      margin-left: auto;
-      
+    .header-name {
+      width: 30%;
     }
 
-    .test-warning {
-      text-align: right;
-      color: red;
-      font-size: 16px;
-      font-weight: bold;
-      margin-left: auto;
+    .header-price, .header-quantity {
+      width: 22%;
+    }
+
+    .header-remove {
+      width: 4%;
     }
   }
-  
 
-  @media only screen and (max-width: 800px) {
-    .checkout-page {
-      width: 100%
-    }
+  .total {
+    margin-top: 30px;
+    margin-left: auto;
+    font-size: 26px;
+    padding-bottom: 20px;
   }
-  
+
+  button {
+    margin-left: auto;
+    
+  }
+
+  .test-warning {
+    text-align: right;
+    color: red;
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: auto;
+  }
+}
+
+
+@media only screen and (max-width: 800px) {
+  .checkout-page {
+    width: 100%;
+  }
+}
+
