--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -1,43 +1,43 @@
 .checkout-item {
-    width: 100%;
-    display: flex;
-    min-height: 100px;
-    border-bottom: 1px solid darkgrey;
-    padding: 15px 0;
-    font-size: 16px;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  min-height: 100px;
+  border-bottom: 1px solid darkgrey;
+  padding: 15px 0;
+  align-items: center;
   
-    .image-container {
-      width: 23%;
-      padding-right: 15px;
-  
-      img {
-        width: 90%;
-        height: 90%;
-      }
-    }
-    .name,
-    .quantity,
-    .price {
-      width: 23%;
-    }
-  
-    .quantity {
-      padding-left: 20px;
-      display: flex;
+  .image-container {
+    width: 23%;
+    padding-right: 15px;
 
-      .arrow {
-        cursor: pointer;
-      }
-
-      .value {
-        margin: 0 10px;
-      }
-    }
-  
-    .remove-button {
-      padding-left: 12px;
-      cursor: pointer;
+    img {
+      width: 90%;
+      height: 90%;
+      margin: auto;
     }
   }
-  
+  .name {
+    width: 30%;
+  }
+  .price {
+    width: 22%;
+  }
+
+  .quantity {
+    width: 22%;
+    display: flex;
+
+    .arrow {
+      cursor: pointer;
+    }
+
+    .value {
+      margin: 0 5px;
+    }
+  }
+
+  .remove-button {
+    width: 4%;
+    cursor: pointer;
+  }
+}
