--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,5 +1,5 @@
 .custom-button {
-    min-width: 165px;
+    min-width: 145px;
     width: auto;
     height: 50px;
     letter-spacing: 0.5px;
@@ -54,3 +54,11 @@
 
   }
   
+  @media only screen and (max-width: 600px) {
+
+    .custom-button{
+      padding: 0 0 0 0;
+      font-size: 14px;
+    }
+
+  }
