--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -15,7 +15,8 @@
       height: 240px;
       display: flex;
       flex-direction: column;
-      overflow: auto;
+      overflow-x: hidden; /* Hide horizontal scrollbar */
+      overflow-y: scroll; /* Add vertical scrollbar */
     }
   
     button {
