More responsive design changes.

--- a/src/components/account-info/account-info.styles.scss
+++ b/src/components/account-info/account-info.styles.scss
@@ -37,9 +37,9 @@
 }
 
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
     .account-info {
-      padding: 0 0 0 0;
+      padding: 10px 10px;
       margin: auto;
 
       .buttons {
