--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -6,7 +6,7 @@
     font-size: small;
     text-align: center;
     line-height: 1.2em;
-    border-top: .5pt solid silver;
+    border-top: .5px solid silver;
 
     .copyright {
         font-weight: bold;
