Added title to checkout page.

--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -12,6 +12,12 @@
   align-items: center;
   margin: 10px auto 0;
 
+  .title {
+    font-size: 28px;
+    margin-bottom: 25px;
+    font-weight: normal;
+  }
+
   .checkout-header {
     width: 100%;
     padding: 10px 0;
