--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -6,6 +6,7 @@
   align-items: center;
   margin: auto;
   position: relative;
+  margin-bottom: 20px;
 
   &:hover {
     .image {
@@ -26,7 +27,6 @@
   }
 
   .custom-button {
-    width: 80%;
     opacity: 0.75;
     position: absolute;
     top: 255px;
@@ -36,18 +36,12 @@
   .collection-footer {
     width: 100%;
     height: 5%;
-    display: flex;
-    justify-content: space-between;
+    //display: flex;
+    //justify-content: space-between;
     font-size: 18px;
     padding-bottom: 30px;
-
-    .name {
-      width: 90%;
-      margin-bottom: 15px;
-    }
-
-    .price {
-      width: 10%;
-    }
+    text-align: center;
+    
+    
   }
 }
