1.Added redux-thunk and moved all load of shop data to redux code. 2.Implemented Container Pattern on the shop pages.

--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -58,10 +58,17 @@
   .test-warning {
     text-align: right;
     color: red;
-    font-size: 16px;
+    font-size: small;
     font-weight: bold;
     margin-left: auto;
+
+    .stripe-link {
+      cursor: pointer;
+      text-decoration: underline;
+
+    }
   }
+
 }
 
 
