--- a/client/src/components/header/header.styles.scss
+++ b/client/src/components/header/header.styles.scss
@@ -8,6 +8,8 @@
     .logo-container {
       height: 100%;
       width: 70px;
+      margin-left: 10px;
+      margin-top: 5px;
     }
   
     .logo-name {
