--- a/client/src/components/cart-icon/cart-icon.styles.scss
+++ b/client/src/components/cart-icon/cart-icon.styles.scss
@@ -1,22 +1,38 @@
 .cart-icon {
-    width: 45px;
-    height: 45px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+  width: 45px;
+  height: 45px;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  vertical-align: bottom;
   
-    .shopping-icon {
-      width: 24px;
-      height: 24px;
-    }
-  
-    .item-count {
-      position: absolute;
-      font-size: 10px;
-      font-weight: bold;
-      bottom: 12px;
-    }
+  .shopping-icon {
+    width: 24px;
+    height: 24px;
   }
+
+  .item-count {
+    position: absolute;
+    font-size: 10px;
+    font-weight: bold;
+    bottom: 12px;
+  }
+}
+
+#shop-cart-mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 650px) {
+
+  #shop-cart-mobile {
+    display: inline-flex;
+  }
+
+  #shop-cart {
+    display:none;
+  }
+}
   
