--- a/client/src/pages/utilities/utilities.styles.scss
+++ b/client/src/pages/utilities/utilities.styles.scss
@@ -6,7 +6,9 @@
     padding: 20px 20px;
 
     .utility {
-        width: 300px;
+        width: 400px;
+        padding-bottom: 10px;
+        border-bottom: .5px solid silver;
 
         .title {
             font-size: 24px;
