--- a/client/src/pages/account-order-details/account-order-details.styles.scss
+++ b/client/src/pages/account-order-details/account-order-details.styles.scss
@@ -14,7 +14,7 @@
 }
 
 @media only screen and (max-width: 350px) {
-    .order-details-wrapper {
+    .account-order-details {
         padding: 10px 10px;
     }
 }
