--- a/client/src/components/footer/footer.styles.scss
+++ b/client/src/components/footer/footer.styles.scss
@@ -1,15 +1,17 @@
 .footer-wrapper {
     padding: 50px 0;
+    background-color: black;
+    color: white;
 }
+
 .footer {
 
     font-size: small;
     text-align: center;
     line-height: 1.2em;
-    border-top: .5px solid silver;
+    letter-spacing: 1pt;
 
     .copyright {
-        font-weight: bold;
         padding: 15px;
     }
 
