--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -2,4 +2,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  .promo-image {
+    width: 100%;
+  }
+
+  .department-message{
+    padding: 30px 0px;
+    font-size: 20pt;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    background-color: white;
+    text-transform: uppercase;
+    letter-spacing: 2pt;
+  }
+
+}
+
+@media only screen and (max-width: 650px) {
+
+  .homepage .department-message {
+    font-size: 14pt;
+  }
+
 }
