--- a/client/src/components/footer/footer.styles.scss
+++ b/client/src/components/footer/footer.styles.scss
@@ -1,7 +1,8 @@
 .footer-wrapper {
-    padding: 50px 0;
+    padding: 20px 0;
     background-color: black;
     color: white;
+    margin-top: 10px;
 }
 
 .footer {
