Changed header and footer layouts. Added better navigation and mobile drop down.

--- a/client/src/components/banner-message/banner-message.styles.scss
+++ b/client/src/components/banner-message/banner-message.styles.scss
@@ -1,10 +1,10 @@
 .banner-message {
     text-align: center;
     padding: 8px;
-    background-color: green;
+    background-color: black;
     color: white;
     letter-spacing: 2pt;
-    font-weight: bold;
+    font-size: 9pt;
 }
 
 .message-link {
