--- a/client/src/components/cart-icon/cart-icon.styles.scss
+++ b/client/src/components/cart-icon/cart-icon.styles.scss
@@ -1,6 +1,6 @@
 .cart-icon {
-  width: 45px;
-  height: 45px;
+  width: 40px;
+  height: 40px;
   position: relative;
   display: inline-flex;
   align-items: center;
@@ -17,8 +17,8 @@
     position: absolute;
     font-size: 10px;
     font-weight: bold;
-    bottom: 12px;
-    color:white;
+    bottom: 10px;
+    color:black;
   }
 }
 
